--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.6",
     "next": "14.2.13",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
