--- a/backend/TrackerAPI/package.json
+++ b/backend/TrackerAPI/package.json
@@ -6,6 +6,7 @@
    "devDependencies": {
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
+      "@types/jsonwebtoken": "^9.0.7",
       "@types/node": "^16.11.10",
       "ts-node": "10.9.1",
       "typescript": "4.5.2"
@@ -14,6 +15,7 @@
       "cors": "^2.8.5",
       "dotenv": "^16.4.5",
       "express": "^4.21.0",
+      "jsonwebtoken": "^9.0.2",
       "nodemon": "^3.1.7",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
