--- a/backend/TrackerAPI/package.json
+++ b/backend/TrackerAPI/package.json
@@ -9,7 +9,7 @@
       "@types/jsonwebtoken": "^9.0.7",
       "@types/node": "^16.11.10",
       "ts-node": "10.9.1",
-      "typescript": "4.5.2"
+      "typescript": "^4.5.2"
    },
    "dependencies": {
       "cors": "^2.8.5",
